@@ -1,3 +1,12 @@
+2007-03-03  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
+	* src/Makefile.am (EXTRA_DIST, libthai_la_LDFLAGS), +src/libthai.def:
+	Add -export-symbols flag to limit exported symbols. Thanks Loïc Minier
+	for suggestion.
+
+	* src/thwstr/thwstr.c (th_wthaichunk): Declare the non-extern func as
+	static.
+
 2007-03-02  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	* data/tdict-common.txt: Added words.
@@ -1297,13 +1306,13 @@
 	* Makefile.am (1.2), configure.in (1.2), include/Makefile.am (1.2,
 	r0_1_1, r0_1_0), include/thai/Makefile.am (1.2), src/Makefile.am
 	(1.2), src/thcoll/Makefile.am (1.2, r0_1_1, r0_1_0),
-	tests/Makefile.am (1.2): Add $Id: ChangeLog,v 1.132 2007-03-02 15:17:05 thep Exp $
+	tests/Makefile.am (1.2): Add $Id: ChangeLog,v 1.133 2007-03-03 05:45:48 thep Exp $
 
 2001-06-12 Tuesday 20:14  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	* src/thcoll/cweight.c (1.2, r0_1_0), src/thcoll/cweight.h (1.2,
 	r0_1_0), src/thcoll/thcoll.c (1.2), tests/test-thcoll.sh (1.2,
-	r0_1_1, r0_1_0), tests/thsort.c (1.2, r0_1_1, r0_1_0): Add $Id: ChangeLog,v 1.132 2007-03-02 15:17:05 thep Exp $
+	r0_1_1, r0_1_0), tests/thsort.c (1.2, r0_1_1, r0_1_0): Add $Id: ChangeLog,v 1.133 2007-03-03 05:45:48 thep Exp $
 
 2001-06-12 Tuesday 20:12  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
